Divide by 5 Memory Usage but use a bit more the CPU